--- a/reparaciones-electrodomesticos-quito-ecuador-nosotros.html
+++ b/reparaciones-electrodomesticos-quito-ecuador-nosotros.html
@@ -49,7 +49,7 @@
     <td><style type="text/css"> 
 #capa1{ position:absolute; z-index:1; left:10px;} 
 </style>
-<a href="index.html"/><div id="capa1"><img src="images/celular.png" width="210" class="img-responsive"/></div></td>
+<a href="index.html"/><div id="capa1"><img src="images/celular1.png" width="210" class="img-responsive"/></div></td>
   </tr>
 </table></h1>
 			   </div>
@@ -239,7 +239,7 @@
 					<p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
 					<div class="phone">
 						
-						<p>Celular : (593) 995 478 665</p>
+						<p>Celular : (593) 995144687</p>
 						<p>Email : <a href="mailto:markosandi@hotmail.com">markosandi@hotmail.com</a></p>
 					</div>
 				</div>
