--- a/galeria.html
+++ b/galeria.html
@@ -44,7 +44,7 @@
             <td><style type="text/css"> 
             #capa1{ position:absolute; z-index:1; left:10px;} 
             </style>
-            <a href="index.html"><div id="capa1"><img src="images/celular.png" width="210" class="img-responsive"/></div></td>
+            <a href="index.html"><div id="capa1"><img src="images/celular1.png" width="210" class="img-responsive"/></div></td>
               </tr>
                     </table></h1>
                        </div>
@@ -83,7 +83,7 @@
                                     <a href="contactos.html" class="nav-link">Contacto</a>
                             
                                      <li class="nav-item">
-                                        <a href="https://api.whatsapp.com/send?phone=593995478665&text=hola%20necesito%20informaci%C3%B3n%20sobre%20su%20servicio"><img src="images\whatsapp.png" alt="" height="50" width="50"></a> 
+                                        <a href="https://api.whatsapp.com/send?phone=593995144687&text=hola%20necesito%20informaci%C3%B3n%20sobre%20su%20servicio"><img src="images\whatsapp.png" alt="" height="50" width="50"></a> 
                                     </li>
                                      
                           </ul>
@@ -235,7 +235,7 @@
                        <h4>Direcci&oacute;n :</h4>
                        <p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
                        <div class="phone">
-                           <p>Celular : (593) 995 478 665</p>
+                           <p>Celular : (593) 995144687</p>
                            <p>Email : <a href="mailto:markosandi@hotmail.com">markosandi@hotmail.com</a></p>
                        </div>
                    </div>
