--- a/reparaciones-electrodomesticos-quito-ecuador-refrigeradoras.html
+++ b/reparaciones-electrodomesticos-quito-ecuador-refrigeradoras.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
    <head>
-      <title>Euro Cold  | Refrigeradoras</title>
+      <title>Servimarc  | Refrigeradoras</title>
       <!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
