--- a/contactos.html
+++ b/contactos.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
    <head>
-      <title>Euro Cold | Contactos</title>
+      <title>Servimarc | Contactos</title>
       <!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
