--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <html lang="zxx ">
 
    <head>
-      <title>Euro Cold  | Inicio</title>
+      <title>Servimarc  | Inicio</title>
       <!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
