cambio numero y corro
se cambia el corre y elnumero

--- a/calefones.html
+++ b/calefones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
    <head>
-      <title>Euro Cold  | Calefones</title>
+      <title>Servimarc  | Calefones</title>
       <!-- Meta Tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
@@ -240,8 +240,8 @@
 					<p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
 					<div class="phone">
 						
-						<p>Celular : (593) 995144687</p>
-						<p>Email : <a href="mailto: markosandi@hotmail.com">markosandi@hotmail.com</a></p>
+						<p>Celular : (593) 995478665</p>
+						<p>Email : <a href="mailto: servimarc2021@gmail.com">servimarc2021@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
