--- a/contactos.html
+++ b/contactos.html
@@ -138,7 +138,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<h3>Direcci&oacute;n</h3>
 							<ul>
 								<li><span class="fa fa-home" aria-hidden="true"></span>Flavio Alfaro y Mariscal Sucre, San Carlos.</li>
-								<li><span class="fa fa-envelope" aria-hidden="true"></span><a href="mailto:markosandi@hotmail.com">markosandi@hotmail.com</a></li>
+								<li><span class="fa fa-envelope" aria-hidden="true"></span><a href="mailto:servimarc2021@gmail.com">servimarc2021@gmail.com</a></li>
 								<li><span class="fa fa-phone" aria-hidden="true"></span> (593) 995 478 665</li>
 							</ul>
 					</div>
@@ -174,8 +174,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<h4>Direcci&oacute;n :</h4>
 					<p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
 					<div class="phone">
-						<p>Celular : (593) 995144687</p>
-						<p>Email : <a href="mailto:markosandi@hotmail.com"></a>markosandi@hotmail.com</p>
+						<p>Celular : (593) 995478665</p>
+						<p>Email : <a href="mailto:servimarc2021@gmail.com"></a>servimarc2021@gmail.com</p>
 					</div>
 				</div>
 			</div>
