--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
 					<p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
 					
                                             <div class="phone">	
-						<p>Celular : (593) 995144687</p>
-						<p>Email : <a href="">markosandi@hotmail.com</a></p>
+						<p>Celular : (593) 995478665</p>
+						<p>Email : <a href="">servimarc2021@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
