--- a/galeria.html
+++ b/galeria.html
@@ -235,8 +235,8 @@
                        <h4>Direcci&oacute;n :</h4>
                        <p>Flavio Alfaro y Mariscal Sucre, San Carlos.</p>
                        <div class="phone">
-                           <p>Celular : (593) 995144687</p>
-                           <p>Email : <a href="mailto:markosandi@hotmail.com">markosandi@hotmail.com</a></p>
+                           <p>Celular : (593) 995478665</p>
+                           <p>Email : <a href="mailto:servimarc2021@gmail.com">servimarc2021@gmail.com</a></p>
                        </div>
                    </div>
                </div>
