--- a/contactos.html
+++ b/contactos.html
@@ -49,7 +49,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<td><style type="text/css"> 
 		#capa1{ position:absolute; z-index:1; left:10px;} 
 		</style>
-		<a href="index.html"><div id="capa1"><img src="images/celular1.png" width="210" class="img-responsive"/></div></td>
+		<a href="index.html"><div id="capa1"><img src="" width="210" class="img-responsive"/></div></td>
 		  </tr>
 				</table></h1>
 				   </div>
@@ -88,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<a href="contactos.html" class="nav-link">Contacto</a>
 						
 								 <li class="nav-item">
-									<a href="https://api.whatsapp.com/send?phone=593995144687&text=hola%20necesito%20informaci%C3%B3n%20sobre%20su%20servicio"><img src="images\whatsapp.png" alt="" height="50" width="50"></a> 
+									<a href="https://api.whatsapp.com/send?phone=593995478665&text=hola%20necesito%20informaci%C3%B3n%20sobre%20su%20servicio"><img src="images\whatsapp.png" alt="" height="50" width="50"></a> 
 								</li>
 								 
 					  </ul>
