--- a/reparaciones-electrodomesticos-quito-ecuador-nosotros.html
+++ b/reparaciones-electrodomesticos-quito-ecuador-nosotros.html
@@ -49,7 +49,7 @@
     <td><style type="text/css"> 
 #capa1{ position:absolute; z-index:1; left:10px;} 
 </style>
-<a href="index.html"/><div id="capa1"><img src="images/celular1.png" width="210" class="img-responsive"/></div></td>
+<a href="index.html"/><div id="capa1"><img src="" width="210" class="img-responsive"/></div></td>
   </tr>
 </table></h1>
 			   </div>
