--- a/calefones.html
+++ b/calefones.html
@@ -268,7 +268,7 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<p>© 2020 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="http://primogenio.com/">PRIMOGENIO</a> </p>
+			<p>© 2021 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://www.ellobby.xyz"></a>RIYOM TEC.</a> </p>
 		</div>
 	</div>
 </section>
