--- a/contactos.html
+++ b/contactos.html
@@ -202,7 +202,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 		</div>
 		<div class="copyright">
-			<p>© 2020 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://primogenio.com/">PRIMOGENIO</a> </p>
+			<p>© 2021 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://www.elloby.xyz">RIYOM TEC.</a> </p>
 		</div>
 	</div>
 </section>
