--- a/reparaciones-electrodomesticos-quito-ecuador-lavadoras.html
+++ b/reparaciones-electrodomesticos-quito-ecuador-lavadoras.html
@@ -274,7 +274,7 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<p>© 2020 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="http://primogenio.com/">PRIMOGENIO</a> </p>
+			<p>© 2021 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://www.ellobby.xyz">RIYOM TEC.</a> </p>
 		</div>
 	</div>
 </section>
