--- a/reparaciones-electrodomesticos-quito-ecuador-refrigeradoras.html
+++ b/reparaciones-electrodomesticos-quito-ecuador-refrigeradoras.html
@@ -185,7 +185,7 @@
 			</div>
 		</div>
 		<div class="copyright">
-			<p>© 2020 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://primogenio.com/">PRIMOGENIO</a> </p>
+			<p>© 2021 Euro Cold. Derechos Reservados | Dise&ntilde;ado por <a href="https://www.elloby.xyz">RIYOM TEC.</a> </p>
 		</div>
 	</div>
 </section>
